Add partial support for IPTC-IIM
Allows reading a subset of possible IPTC-IIM tags from JPEG files.
Specifically those tags are read that directly map to XMP tags.
If both XMP and IIM tags exist the XMP tags take precedence.

This change supports IIM as far as necessary to import images from
Mediadex into f-spot.

--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>tests</RootNamespace>
     <AssemblyName>tests</AssemblyName>
-    <ReleaseVersion>2.0.3.5</ReleaseVersion>
+    <ReleaseVersion>2.0.4.0</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,11 +50,10 @@
     <Compile Include="fixtures\TagLib.Tests.FileFormats\IFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\JpegFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\M4aFormatTest.cs" />
-	<Compile Include="fixtures\TagLib.Tests.FileFormats\M4vFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\M4vFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\MpcFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\OggFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\StandardTests.cs" />
-    <Compile Include="fixtures\TagLib.Tests.FileFormats\TiffFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\AddImageMetadataTests.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\JpegCanonZoombrowserTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon1Test.cs" />
@@ -71,7 +70,6 @@
     <Compile Include="fixtures\TagLib.Tests.Images\JpegSony2Test.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\JpegTangledTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\RationalTest.cs" />
-    <Compile Include="fixtures\TagLib.Tests.Images\TiffXmpTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\Utils.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\Validators\CommentModificationValidator.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\Validators\ImageTest.cs" />
@@ -94,11 +92,55 @@
     <Compile Include="fixtures\TagLib.Tests.TaggingFormats\MovieIdTagTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.TaggingFormats\Mpeg4Test.cs" />
     <Compile Include="fixtures\TagLib.Tests.TaggingFormats\XiphTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Collections\ImageBlockFileTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V24FormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\BadCommentMarkerTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\BGO493530Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\BGO625367Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\BGO631333Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\CopyFromTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\EmptyCommentTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\GifExiftoolLongCommentTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\GifExiftoolTangled1Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\GifExiftoolTangled2Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\GifExiftoolTangled3Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\GifExiftoolTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\GifGimpTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\InvalidIFDEntryTypeTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\InvalidIFDOffsetTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegBGO624097Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegCanonBibble5Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon1Bibble5Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegNikon2Bibble5Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegOlympusCorruptMNTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\JpegPropertyTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\NullOrientationTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\PngGimpPngcrushTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\PngGimpTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\RecursiveIFDTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffCanonBibble516BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffCanonBibble58BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffCanonDpp16BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffCanonDpp8BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffGimp1Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffGimp2Test.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon1Bibble516BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon1Bibble58BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon1ViewNX16BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon1ViewNX8BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon2Bibble516BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon2Bibble58BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon2ViewNX16BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\TiffNikon2ViewNX8BitTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\PropertyModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\RemoveMetadataValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\Validators\TagPropertyModificationValidator.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\IptcTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <MonoDevelop>
-      <Properties InternalTargetFrameworkVersion="3.5">
+      <Properties>
         <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="true" RelativeMakefileName="Makefile.am" BuildTargetName="build" IsAutotoolsProject="true" RelativeConfigureInPath="..">
           <BuildFilesVar Sync="true" Name="ASSEMBLY_CSFILES" />
           <DeployFilesVar />
