--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -268,6 +268,8 @@
     <Compile Include="TagLib\Xmp\XmpNodeType.cs" />
     <Compile Include="TagLib\Xmp\XmpNodeVisitor.cs" />
     <Compile Include="TagLib\Xmp\XmpTag.cs" />
+    <Compile Include="TagLib\IIM\IIMTag.cs" />
+    <Compile Include="TagLib\IIM\IIMReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TagLib\NonContainer\" />
@@ -276,6 +278,7 @@
     <Folder Include="TagLib\Id3v2\" />
     <Folder Include="TagLib\Mpeg4\" />
     <Folder Include="TagLib\Ogg\" />
+    <Folder Include="TagLib\IIM\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
