Add partial support for IPTC-IIM
Allows reading a subset of possible IPTC-IIM tags from JPEG files.
Specifically those tags are read that directly map to XMP tags.
If both XMP and IIM tags exist the XMP tags take precedence.

This change supports IIM as far as necessary to import images from
Mediadex into f-spot.

Signed-off-by: Alexander Kojevnikov <alexander@kojevnikov.com>

--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -270,6 +270,8 @@
     <Compile Include="TagLib\Xmp\XmpTag.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\TextBox.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\UrlBox.cs" />
+    <Compile Include="TagLib\IIM\IIMTag.cs" />
+    <Compile Include="TagLib\IIM\IIMReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TagLib\NonContainer\" />
@@ -278,6 +280,7 @@
     <Folder Include="TagLib\Id3v2\" />
     <Folder Include="TagLib\Mpeg4\" />
     <Folder Include="TagLib\Ogg\" />
+    <Folder Include="TagLib\IIM\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
