tests: retrieve git submodule before running tests
Some tests may fail with FileNotFoundExceptions if the
git submodule "rawsamples" is not retrieved first. This
commits makes the "test" target clever enough to retrieve
the submodule, in a similar way it is done in Banshee
build workflow (in the latter, autogen.sh would check out
the submodule, but in this case, we retrieve it at build
time because it depends on the --enable-tests flag).

--- a/configure.ac
+++ b/configure.ac
@@ -120,6 +120,11 @@ if test "x$do_tests" = "xno"; then
 else
 	AC_PATH_PROG(NUNIT_CMD, nunit-console2, nunit-console)
 	AC_SUBST(NUNIT_CMD)
+
+	AC_PATH_PROG(GIT, git)
+	if test x$GIT = x; then
+		AC_MSG_ERROR(You need git installed to run automated tests)
+	fi
 fi
 
 AC_ARG_ENABLE(raw-tests, AC_HELP_STRING([--enable-raw-tests], [Enable RAW image files NUnit tests]),
