Updated .gitignore to ignore Visual Studio files(user, suo, pdb, obj folder) and not ignore src/AssemblyInfo.cs. Solution and project files updated to VS10 and .NET 3.5. src/AssemblyInfo.cs added(compilation problems in VS). taglib-sharp project links to snk file in root directory, not to src.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ configure
 *.config
 install-sh
 missing
-src/AssemblyInfo.cs
 *.pc
 *.zip
 tests/samples/tmp*
@@ -29,3 +28,7 @@ tests/*.dll
 tests/*.xml
 test-results
 .*.swp
+[oO]bj
+*.user
+*.pdb
+*.suo
