[Mpeg4] Ensure that we parse AppleAdditionalInfoBox elements properly
We do not care what the contents of these elements are. They can literally
be anything. As such, we should parse them as a black box and assume
nothing about their contents. Add a test to ensure we parse the file
correctly.

Fixes bgo 658920.

--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -10,6 +10,8 @@
     <RootNamespace>tests</RootNamespace>
     <AssemblyName>tests</AssemblyName>
     <ReleaseVersion>2.0.4.0</ReleaseVersion>
+    <SignAssembly>True</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
@@ -39,6 +41,7 @@
       <Private>False</Private>
       <Package>gtk-sharp-2.0</Package>
     </Reference>
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="fixtures\Helpers.cs" />
