--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -12,6 +12,7 @@
     <ReleaseVersion>2.0.4.0</ReleaseVersion>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
