[Audible] Commit the initial support for Audible files
Only .aa files are supported. Parsing for .aax is not yet implemented.
Patch was contributed by Guy Taylor and fixes bug:

https://bugzilla.gnome.org/show_bug.cgi?id=601543

--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -272,6 +272,8 @@
     <Compile Include="TagLib\Mpeg4\Boxes\UrlBox.cs" />
     <Compile Include="TagLib\IIM\IIMTag.cs" />
     <Compile Include="TagLib\IIM\IIMReader.cs" />
+    <Compile Include="TagLib\Audible\File.cs" />
+    <Compile Include="TagLib\Audible\Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TagLib\NonContainer\" />
@@ -281,6 +283,7 @@
     <Folder Include="TagLib\Mpeg4\" />
     <Folder Include="TagLib\Ogg\" />
     <Folder Include="TagLib\IIM\" />
+    <Folder Include="TagLib\Audible\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
