Remove null value at the end of XMP data.
This was causing an XmlException when parsing XMP metadata
with Microsoft .NET 4.0 since its implementation of XML
parsing does not accept null-ended string. This did not
affect Mono (tested with 2.10.5).

Thanks to Anuj Pandey (e10) for spotting the cause of the problem.

--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -148,6 +148,7 @@
     <Compile Include="fixtures\TagLib.Tests.Images\Validators\TagPropertyModificationValidator.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\IptcTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AudibleFormat.cs" />
+    <Compile Include="fixtures\TagLib.Tests.Images\XmlNullEndedTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
