--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -22,11 +22,12 @@
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
-    <AssemblyOriginatorKeyFile>.</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\taglib-sharp.snk</AssemblyOriginatorKeyFile>
     <Execution>
       <Execution clr-version="Net_2_0" />
     </Execution>
     <DefineConstants>HAVE_SHARPZIPLIB</DefineConstants>
+    <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
@@ -42,6 +43,23 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="TagLib\ByteVector.cs" />
+    <Compile Include="TagLib\ByteVectorList.cs" />
+    <Compile Include="TagLib\CombinedTag.cs" />
+    <Compile Include="TagLib\CorruptFileException.cs" />
+    <Compile Include="TagLib\Debugger.cs" />
+    <Compile Include="TagLib\File.cs" />
+    <Compile Include="TagLib\FileTypes.cs" />
+    <Compile Include="TagLib\Genres.cs" />
+    <Compile Include="TagLib\ICodec.cs" />
+    <Compile Include="TagLib\ListBase.cs" />
+    <Compile Include="TagLib\Picture.cs" />
+    <Compile Include="TagLib\Properties.cs" />
+    <Compile Include="TagLib\ReadOnlyByteVector.cs" />
+    <Compile Include="TagLib\StringList.cs" />
+    <Compile Include="TagLib\SupportedMimeType.cs" />
+    <Compile Include="TagLib\Tag.cs" />
+    <Compile Include="TagLib\UnsupportedFormatException.cs" />
     <Compile Include="TagLib\Aac\AudioHeader.cs" />
     <Compile Include="TagLib\Aac\BitStream.cs" />
     <Compile Include="TagLib\Aac\File.cs" />
@@ -67,72 +85,16 @@
     <Compile Include="TagLib\Asf\StreamPropertiesObject.cs" />
     <Compile Include="TagLib\Asf\Tag.cs" />
     <Compile Include="TagLib\Asf\UnknownObject.cs" />
-    <Compile Include="TagLib\ByteVector.cs" />
-    <Compile Include="TagLib\ByteVectorList.cs" />
-    <Compile Include="TagLib\CombinedTag.cs" />
-    <Compile Include="TagLib\CorruptFileException.cs" />
-    <Compile Include="TagLib\File.cs" />
-    <Compile Include="TagLib\FileTypes.cs" />
+    <Compile Include="TagLib\Audible\File.cs" />
+    <Compile Include="TagLib\Audible\Tag.cs" />
     <Compile Include="TagLib\Flac\Block.cs" />
     <Compile Include="TagLib\Flac\BlockHeader.cs" />
     <Compile Include="TagLib\Flac\File.cs" />
     <Compile Include="TagLib\Flac\Picture.cs" />
     <Compile Include="TagLib\Flac\StreamHeader.cs" />
-    <Compile Include="TagLib\Genres.cs" />
     <Compile Include="TagLib\Gif\Codec.cs" />
     <Compile Include="TagLib\Gif\File.cs" />
     <Compile Include="TagLib\Gif\GifCommentTag.cs" />
-    <Compile Include="TagLib\ICodec.cs" />
-    <Compile Include="TagLib\Id3v1\StringHandler.cs" />
-    <Compile Include="TagLib\Id3v1\Tag.cs" />
-    <Compile Include="TagLib\Id3v2\ExtendedHeader.cs" />
-    <Compile Include="TagLib\Id3v2\Footer.cs" />
-    <Compile Include="TagLib\Id3v2\Frame.cs" />
-    <Compile Include="TagLib\Id3v2\FrameFactory.cs" />
-    <Compile Include="TagLib\Id3v2\FrameHeader.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\CommentsFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\MusicCdIdentifierFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\PlayCountFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\PopularimeterFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\PrivateFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\SynchronizedLyricsFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\TermsOfUseFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\UnknownFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
-    <Compile Include="TagLib\Id3v2\FrameTypes.cs" />
-    <Compile Include="TagLib\Id3v2\Header.cs" />
-    <Compile Include="TagLib\Id3v2\SynchData.cs" />
-    <Compile Include="TagLib\Id3v2\Tag.cs" />
-    <Compile Include="TagLib\IFD\Entries\ByteIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\ByteVectorIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\LongArrayIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\LongIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\MakernoteIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\RationalArrayIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\Rational.cs" />
-    <Compile Include="TagLib\IFD\Entries\RationalIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SByteIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\ShortArrayIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\ShortIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SLongArrayIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SLongIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SRationalArrayIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SRational.cs" />
-    <Compile Include="TagLib\IFD\Entries\SRationalIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SShortArrayIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SShortIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\StringIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\StripOffsetsIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SubIFDArrayEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\SubIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\ThumbnailDataIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\UndefinedIFDEntry.cs" />
-    <Compile Include="TagLib\IFD\Entries\UserCommentIFDEntry.cs" />
     <Compile Include="TagLib\IFD\IFDDirectory.cs" />
     <Compile Include="TagLib\IFD\IFDEntry.cs" />
     <Compile Include="TagLib\IFD\IFDEntryType.cs" />
@@ -140,6 +102,31 @@
     <Compile Include="TagLib\IFD\IFDRenderer.cs" />
     <Compile Include="TagLib\IFD\IFDStructure.cs" />
     <Compile Include="TagLib\IFD\IFDTag.cs" />
+    <Compile Include="TagLib\IFD\Entries\ByteIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\ByteVectorIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\LongArrayIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\LongIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\MakernoteIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\Rational.cs" />
+    <Compile Include="TagLib\IFD\Entries\RationalArrayIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\RationalIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SByteIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SLongArrayIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SLongIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SRational.cs" />
+    <Compile Include="TagLib\IFD\Entries\SRationalArrayIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SRationalIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SShortArrayIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SShortIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\ShortArrayIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\ShortIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\StringIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\StripOffsetsIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SubIFDArrayEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\SubIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\ThumbnailDataIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\UndefinedIFDEntry.cs" />
+    <Compile Include="TagLib\IFD\Entries\UserCommentIFDEntry.cs" />
     <Compile Include="TagLib\IFD\Makernotes\Nikon3MakernoteReader.cs" />
     <Compile Include="TagLib\IFD\Tags\CanonFileInfoEntryTag.cs" />
     <Compile Include="TagLib\IFD\Tags\CanonMakerNoteEntryTag.cs" />
@@ -160,6 +147,33 @@
     <Compile Include="TagLib\IFD\Tags\PanasonicMakerNoteEntryTag.cs" />
     <Compile Include="TagLib\IFD\Tags\PentaxMakerNoteEntryTag.cs" />
     <Compile Include="TagLib\IFD\Tags\SonyMakerNoteEntryTag.cs" />
+    <Compile Include="TagLib\IIM\IIMReader.cs" />
+    <Compile Include="TagLib\IIM\IIMTag.cs" />
+    <Compile Include="TagLib\Id3v1\StringHandler.cs" />
+    <Compile Include="TagLib\Id3v1\Tag.cs" />
+    <Compile Include="TagLib\Id3v2\ExtendedHeader.cs" />
+    <Compile Include="TagLib\Id3v2\Footer.cs" />
+    <Compile Include="TagLib\Id3v2\Frame.cs" />
+    <Compile Include="TagLib\Id3v2\FrameFactory.cs" />
+    <Compile Include="TagLib\Id3v2\FrameHeader.cs" />
+    <Compile Include="TagLib\Id3v2\FrameTypes.cs" />
+    <Compile Include="TagLib\Id3v2\Header.cs" />
+    <Compile Include="TagLib\Id3v2\SynchData.cs" />
+    <Compile Include="TagLib\Id3v2\Tag.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\CommentsFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\MusicCdIdentifierFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\PlayCountFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\PopularimeterFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\PrivateFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\SynchronizedLyricsFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\TermsOfUseFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\UnknownFrame.cs" />
+    <Compile Include="TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
     <Compile Include="TagLib\Image\Codec.cs" />
     <Compile Include="TagLib\Image\CombinedImageTag.cs" />
     <Compile Include="TagLib\Image\File.cs" />
@@ -172,7 +186,6 @@
     <Compile Include="TagLib\Jpeg\JpegCommentTag.cs" />
     <Compile Include="TagLib\Jpeg\Marker.cs" />
     <Compile Include="TagLib\Jpeg\Table.cs" />
-    <Compile Include="TagLib\ListBase.cs" />
     <Compile Include="TagLib\Matroska\AudioTrack.cs" />
     <Compile Include="TagLib\Matroska\EBMLElement.cs" />
     <Compile Include="TagLib\Matroska\EBMLIDs.cs" />
@@ -184,8 +197,19 @@
     <Compile Include="TagLib\Matroska\VideoTrack.cs" />
     <Compile Include="TagLib\Mpc\File.cs" />
     <Compile Include="TagLib\Mpc\StreamHeader.cs" />
+    <Compile Include="TagLib\Mpeg\AudioFile.cs" />
+    <Compile Include="TagLib\Mpeg\AudioHeader.cs" />
+    <Compile Include="TagLib\Mpeg\File.cs" />
+    <Compile Include="TagLib\Mpeg\VBRIHeader.cs" />
+    <Compile Include="TagLib\Mpeg\VideoHeader.cs" />
+    <Compile Include="TagLib\Mpeg\XingHeader.cs" />
     <Compile Include="TagLib\Mpeg4\AppleTag.cs" />
     <Compile Include="TagLib\Mpeg4\Box.cs" />
+    <Compile Include="TagLib\Mpeg4\BoxFactory.cs" />
+    <Compile Include="TagLib\Mpeg4\BoxHeader.cs" />
+    <Compile Include="TagLib\Mpeg4\BoxTypes.cs" />
+    <Compile Include="TagLib\Mpeg4\File.cs" />
+    <Compile Include="TagLib\Mpeg4\FileParser.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\AppleAdditionalInfoBox.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\AppleAnnotationBox.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\AppleDataBox.cs" />
@@ -204,38 +228,26 @@
     <Compile Include="TagLib\Mpeg4\Boxes\IsoSampleTableBox.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\IsoUserDataBox.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\IsoVisualSampleEntry.cs" />
+    <Compile Include="TagLib\Mpeg4\Boxes\TextBox.cs" />
     <Compile Include="TagLib\Mpeg4\Boxes\UnknownBox.cs" />
-    <Compile Include="TagLib\Mpeg4\BoxFactory.cs" />
-    <Compile Include="TagLib\Mpeg4\BoxHeader.cs" />
-    <Compile Include="TagLib\Mpeg4\BoxTypes.cs" />
-    <Compile Include="TagLib\Mpeg4\File.cs" />
-    <Compile Include="TagLib\Mpeg4\FileParser.cs" />
-    <Compile Include="TagLib\Mpeg\AudioFile.cs" />
-    <Compile Include="TagLib\Mpeg\AudioHeader.cs" />
-    <Compile Include="TagLib\Mpeg\File.cs" />
-    <Compile Include="TagLib\Mpeg\VBRIHeader.cs" />
-    <Compile Include="TagLib\Mpeg\VideoHeader.cs" />
-    <Compile Include="TagLib\Mpeg\XingHeader.cs" />
+    <Compile Include="TagLib\Mpeg4\Boxes\UrlBox.cs" />
     <Compile Include="TagLib\NonContainer\EndTag.cs" />
     <Compile Include="TagLib\NonContainer\File.cs" />
     <Compile Include="TagLib\NonContainer\StartTag.cs" />
     <Compile Include="TagLib\NonContainer\Tag.cs" />
     <Compile Include="TagLib\Ogg\Bitstream.cs" />
     <Compile Include="TagLib\Ogg\Codec.cs" />
-    <Compile Include="TagLib\Ogg\Codecs\Theora.cs" />
-    <Compile Include="TagLib\Ogg\Codecs\Vorbis.cs" />
     <Compile Include="TagLib\Ogg\File.cs" />
     <Compile Include="TagLib\Ogg\GroupedComment.cs" />
     <Compile Include="TagLib\Ogg\Page.cs" />
     <Compile Include="TagLib\Ogg\PageHeader.cs" />
     <Compile Include="TagLib\Ogg\Paginator.cs" />
     <Compile Include="TagLib\Ogg\XiphComment.cs" />
-    <Compile Include="TagLib\Picture.cs" />
+    <Compile Include="TagLib\Ogg\Codecs\Theora.cs" />
+    <Compile Include="TagLib\Ogg\Codecs\Vorbis.cs" />
     <Compile Include="TagLib\Png\Codec.cs" />
     <Compile Include="TagLib\Png\File.cs" />
     <Compile Include="TagLib\Png\PngTag.cs" />
-    <Compile Include="TagLib\Properties.cs" />
-    <Compile Include="TagLib\ReadOnlyByteVector.cs" />
     <Compile Include="TagLib\Riff\AviHeaderList.cs" />
     <Compile Include="TagLib\Riff\AviStream.cs" />
     <Compile Include="TagLib\Riff\BitmapInfoHeader.cs" />
@@ -246,21 +258,17 @@
     <Compile Include="TagLib\Riff\ListTag.cs" />
     <Compile Include="TagLib\Riff\MovieIdTag.cs" />
     <Compile Include="TagLib\Riff\WaveFormatEx.cs" />
-    <Compile Include="TagLib\StringList.cs" />
-    <Compile Include="TagLib\SupportedMimeType.cs" />
-    <Compile Include="TagLib\Tag.cs" />
-    <Compile Include="TagLib\Tiff\Arw\File.cs" />
     <Compile Include="TagLib\Tiff\BaseTiffFile.cs" />
     <Compile Include="TagLib\Tiff\Codec.cs" />
+    <Compile Include="TagLib\Tiff\File.cs" />
+    <Compile Include="TagLib\Tiff\Arw\File.cs" />
     <Compile Include="TagLib\Tiff\Cr2\File.cs" />
     <Compile Include="TagLib\Tiff\Dng\File.cs" />
-    <Compile Include="TagLib\Tiff\File.cs" />
     <Compile Include="TagLib\Tiff\Nef\File.cs" />
     <Compile Include="TagLib\Tiff\Pef\File.cs" />
     <Compile Include="TagLib\Tiff\Rw2\File.cs" />
     <Compile Include="TagLib\Tiff\Rw2\IFDReader.cs" />
     <Compile Include="TagLib\Tiff\Rw2\IFDTag.cs" />
-    <Compile Include="TagLib\UnsupportedFormatException.cs" />
     <Compile Include="TagLib\WavPack\File.cs" />
     <Compile Include="TagLib\WavPack\StreamHeader.cs" />
     <Compile Include="TagLib\Xmp\XmlNodeExtensions.cs" />
@@ -268,22 +276,6 @@
     <Compile Include="TagLib\Xmp\XmpNodeType.cs" />
     <Compile Include="TagLib\Xmp\XmpNodeVisitor.cs" />
     <Compile Include="TagLib\Xmp\XmpTag.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\TextBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\UrlBox.cs" />
-    <Compile Include="TagLib\IIM\IIMTag.cs" />
-    <Compile Include="TagLib\IIM\IIMReader.cs" />
-    <Compile Include="TagLib\Audible\File.cs" />
-    <Compile Include="TagLib\Audible\Tag.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TagLib\NonContainer\" />
-    <Folder Include="TagLib\Ogg\Codecs\" />
-    <Folder Include="TagLib\Riff\" />
-    <Folder Include="TagLib\Id3v2\" />
-    <Folder Include="TagLib\Mpeg4\" />
-    <Folder Include="TagLib\Ogg\" />
-    <Folder Include="TagLib\IIM\" />
-    <Folder Include="TagLib\Audible\" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -293,9 +285,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="AssemblyInfo.cs.in" />
-    <None Include="policy.2.0.taglib-sharp.config.in" />
-    <None Include="taglib-sharp.snk" />
+    <Folder Include="TagLib\" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="TagLib\TagLib.sources" />
   </ItemGroup>
 </Project>
