Implemented support for DSF files
Added Unit Tests for Dsf Format

Changed project files to include the DSF specific tests

Test DSF Sample Rate

DSF Test was done for wrong audio properties

--- a/src/taglib-sharp.csproj
+++ b/src/taglib-sharp.csproj
@@ -81,6 +81,8 @@
     <Compile Include="TagLib\Asf\UnknownObject.cs" />
     <Compile Include="TagLib\Audible\File.cs" />
     <Compile Include="TagLib\Audible\Tag.cs" />
+	<Compile Include="TagLib\Dsf\File.cs" />
+	<Compile Include="TagLib\Dsf\StreamHeader.cs" />
     <Compile Include="TagLib\Flac\Block.cs" />
     <Compile Include="TagLib\Flac\BlockHeader.cs" />
     <Compile Include="TagLib\Flac\File.cs" />
