--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,6 +53,7 @@
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AiffFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AsfFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\AviFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\DsfFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\FlacFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3BothFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\Id3V1FormatTest.cs" />
