--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="fixtures\TagLib.Tests.FileFormats\M4vFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\MpcFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\OggFormatTest.cs" />
+    <Compile Include="fixtures\TagLib.Tests.FileFormats\OpusFormatTest.cs" />
     <Compile Include="fixtures\TagLib.Tests.FileFormats\StandardTests.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\AddImageMetadataTests.cs" />
     <Compile Include="fixtures\TagLib.Tests.Images\JpegCanonZoombrowserTest.cs" />
