--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ config.status
 configure
 *.exe
 *.mdb
+*.pdb
 *.pidb
 *.config
 install-sh
@@ -29,3 +30,4 @@ tests/*.dll
 tests/*.xml
 test-results
 .*.swp
+packages
