--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,19 @@ mono:
   - latest
 solution: taglib-sharp.sln
 
+# https://github.com/travis-ci/travis-ci/issues/5932#issuecomment-215693171
+before_install:
+  - mkdir -p .nuget
+  - wget -O .nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+  - mono .nuget/nuget.exe # Output NuGet's version number
+
 install:
   - sudo apt-get update -qq > /dev/null
-  - nuget restore taglib-sharp.sln
+  - mono .nuget/nuget.exe restore taglib-sharp.sln -Verbosity detailed
+  - mono .nuget/nuget.exe install NUnit.Runners -Version 3.2.1 -OutputDirectory packages
 
 script:
   - ./autogen.sh
   - xbuild taglib-sharp.sln
-  - nunit-console --labels=All tests/tests.dll
+  - cd tests
+  - mono ../packages/NUnit.ConsoleRunner.3.6.1/tools/nunit3-console.exe --labels=All tests.dll
