Use nunit from nuget
In newer versions of mono don't include nunit.

--- a/tests/tests.csproj
+++ b/tests/tests.csproj
@@ -43,7 +43,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="nunit.framework">
-      <Private>False</Private>
+      <HintPath>..\packages\NUnit.3.6.1\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -178,5 +178,8 @@
       <Project>{6B143A39-C7B2-4743-9917-92262C60E9A6}</Project>
       <Name>taglib-sharp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
